Fixed up a few more styling things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,11 +48,14 @@
     </form>
   <div>
 
-<div id="main-container">
-  <%= yield %>
-</div>
 
-<div id="footer">
+  <!-- Main Content Container-->
+  <div id="main-container">
+    <%= yield %>
+  </div>
+
+  <!-- Footer Container -->
+    <div id="footer">
       <div class="container">
         <p class="muted credit">Written by Christopher Cooper</p>
       </div>
