--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,10 @@
 <div id="welcome-container">
-  <div>
-    <h1 style="text-align: center">Welcome</h1>
+  <div id="welcome-block-one">
+  </div>
+  <div id="welcome-block-two">
+  </div>
+  <div id="welcome-block-three">
+  </div>
+  <div id="welcome-block-four">
   </div>
 </div>
