--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -1,43 +1,29 @@
-html {
-  height: 100%;
-}
-
-body {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#012136+26,e0e0e0+26 */
-  background: #012136; /* Old browsers */
-  background: -moz-linear-gradient(top,  #012136 30%, #e0e0e0 26%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  #012136 30%,#e0e0e0 26%); /* Chrome10-25,Safari5.1-6 */
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#cbccc8)) fixed;
-  background: linear-gradient(to bottom,  #012136 30%,#e0e0e0 26%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#012136', endColorstr='#e0e0e0',GradientType=0 ); /*
-   IE6-9 */
-  margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
 
 #welcome-container {
-  padding: 5px;
-  height: 75vh;
+  padding: 30px;
+  height: 100%;
   width: 100%;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.32);
 }
 
-#main-container {
-  width: auto;
-  height: 100%;
-  background-color: #fff;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding: 20px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.32);
+#welcome-block-one {
+  height: 100vh;
+  background-image: url("http://image.shutterstock.com/z/stock-vector-set-of-social-people-on-world-map-with-speech-bubbles-in-different-languages-male-and-female-faces-322881275.jpg");
+  background-repeat: no-repeat;
+  padding: 30px;
 }
 
-#footer {
-  padding: 20px;
+
+#welcome-block-two {
+  height: 100vh;
+  background-image: url("http://image.shutterstock.com/z/stock-vector-set-of-social-people-on-world-map-with-speech-bubbles-in-different-languages-male-and-female-faces-322881275.jpg");
+  background-repeat: no-repeat;
+  padding: 30px;
 }
 
-#search {
-  margin: auto;
-  width: 50%
+#welcome-block-three {
+  height: 100vh;
+  background-image: url("http://image.shutterstock.com/z/stock-vector-set-of-social-people-on-world-map-with-speech-bubbles-in-different-languages-male-and-female-faces-322881275.jpg");
+  background-repeat: no-repeat;
+  padding: 30px;
 }
