Fixed up some of the css with the scrolling nav bar

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -6,6 +6,10 @@ nav {
 .navbar {
   border: 0px;
   margin-bottom: 0px;
+  position: fixed;
+  margin-top: -10px;
+  width: 100%;
+  border-radius: 0px;
 }
 
 .navbar-form {
