--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,10 +22,10 @@
  body {
      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#012136+26,e0e0e0+26 */
    background: #012136; /* Old browsers */
-   background: -moz-linear-gradient(top,  #012136 30%, #e0e0e0 100%); /* FF3.6-15 */
-   background: -webkit-linear-gradient(top,  #012136 30%,#e0e0e0 100%); /* Chrome10-25,Safari5.1-6 */
+   background: -moz-linear-gradient(top,  #012136 30%, #e0e0e0 30%); /* FF3.6-15 */
+   background: -webkit-linear-gradient(top,  #012136 30%,#e0e0e0 30%); /* Chrome10-25,Safari5.1-6 */
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#cbccc8)) fixed;
-   background: linear-gradient(to bottom,  #012136 30%,#e0e0e0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+   background: linear-gradient(to bottom,  #012136 30%,#e0e0e0 30%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#012136', endColorstr='#e0e0e0',GradientType=0 );
    margin: 0;
    background-repeat: no-repeat;
@@ -42,7 +42,7 @@
 
  #main-container {
    width: auto;
-   height: 100%;
+   height: auto;
    background-color: #fff;
    margin-left: 50px;
    margin-right: 50px;
