--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,42 +8,44 @@
 </head>
 <body>
 
+  <div id="side-nav">
+    <div class="side-nav-header">
+      <p>Header</p>
+    </div>
+    <ul class="side-menu-list">
+      <a href="#"><li>Hi Man</a></a>
+      <a href="#"><li>Who am I</li></a>
+      <a href="#"><li>Test</li></a>
+    </ul>
+    <div id="side-nav-footer">
+      <p>This is good</p>
+    </div>
+  </div>
+
+  <div id="overlay">
+  </div>
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <div class="navbar-header navbar-right">
+        <button type="button" id="hamburger-menu-slider" class="navbar-toggle navbar-hamburger pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+        <a class="navbar-brand pull-right" href="#">Hello</a>
         <div id="search-bar">
-          <form class="navbar-form" role="search">
+          <form class="navbar-form col-xl-9" role="search">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
           </form>
         </div>
-      </div><!-- /.navbar-collapse -->
+      </div>
+
+    <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
