--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand pull-right" href="#">Hello</a>
+        <a class="navbar-brand pull-right" href="#"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></a>
         <div id="search-bar">
           <form class="navbar-form col-xl-9" role="search">
             <div class="form-group">
@@ -55,6 +55,10 @@
   <div id="main-container">
     <%= yield %>
   </div>
+
+
+
+
 
   <!-- Footer Container -->
     <div id="footer">
