--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand pull-right" href="#"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></a>
+        <div class="navbar-brand pull-right">
+        <% if signed_in? %>
+          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+          <%= link_to "Edit Profile", '/users/edit'%>
+        <% else %>
+          <%= link_to "Sign In", '/users/sign_in'%>
+          <%= link_to "Sign Up", '/users/sign_up'%>
+        <% end %>
+        </div>
+
         <div id="search-bar">
           <form class="navbar-form col-xl-9" role="search">
             <div class="form-group">
