--- a/app/views/note/index.html.erb
+++ b/app/views/note/index.html.erb
@@ -1,6 +1,1 @@
-
-<% @notes.each do |n| %>
-      <p><%= n.title %></p>
-      <p><%= n.content %></p>
-      <p><%= n.category %></p>
-<% end %>
+  <%= react_component 'Notes', { notes: @Notes } %>
