Did a lot of work on the notes section, including draggable and resizing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,18 @@
 
 <script type="text/template" id='appViewTemplate'>
     <div class="selection-type">
-      <p></p>
+      <p>Test</p>
+    </div>
+</script>
+
+<script type="text/template" id='appNoteViewTemplate'>
+
+    <div class="new-note-container">
+      <div class="new-note"></div>
+    </div>
+
+    <div id="notes">
+      <ul class="notes-list">
+      </ul>
     </div>
 </script>
