--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,14 +46,45 @@
    min-height: 100vh;
    height: auto;
    background-color: #fff;
-   margin-left: 50px;
-   margin-right: 50px;
+   margin-left: 25px;
+   margin-right: 25px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.32);
    padding-top: 100px;
-   padding-left: 50px;
-   padding-right: 50px;
+   text-align: left;
+   /*padding-left: 50px;
+   padding-right: 50px;*/
  }
 
  #footer {
    padding: 20px;
+ }
+
+
+
+
+ @media (min-width: 480px){
+
+   #main-container {
+     margin-left: 35px;
+     margin-right: 35px;
+   }
+
+ }
+
+ @media (min-width: 768px){
+
+   #main-container {
+     margin-left: 35px;
+     margin-right: 35px;
+   }
+
+ }
+
+ @media (min-width: 992px){
+
+   #main-container {
+     margin-left: 50px;
+     margin-right: 50px;
+   }
+
  }
