--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -7,6 +7,10 @@ nav {
   display: block;
 }
 
+.user-buttons {
+
+}
+
 .navbar {
   border: 0px;
   margin-bottom: 0px;
@@ -108,7 +112,7 @@ nav > .container-fluid {
   position: fixed;
   background-color: white;
   border-right: 1px solid black;
-  z-index: 99;
+  z-index: 9999999;
   min-width: 300px;
   height: 100%;
   left: -300px;
@@ -136,4 +140,46 @@ nav > .container-fluid {
     background-color: rgba(0,0,0,0.4);
     z-index: 98;
     display:none;
+}
+
+.sub-nav {
+  height: 40px;
+  width: 100%;
+  background-color: #2196F3;
+  text-align: center;
+}
+
+.sub-nav-option {
+  display: inline-block;
+  text-align: center;
+  height: 40px;
+  width: 30%;
+  margin-top: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 480px){
+
+  #search-bar {
+    display: none;
+  }
+
+}
+
+@media (min-width: 768px){
+
+
+}
+
+@media (min-width: 992px){
+
+
 }
