--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -4,25 +4,63 @@
 
 
 .note {
+  vertical-align: top;
   width: 250px;
   height: 250px;
-  max-width: 250px;
-  max-height: 250px;
+  min-width: 250px;
+  min-height: 250px;
   display: inline-block;
   overflow: hidden;
-  border: 0px solid #000;
-  box-shadow: 2px 2px 0px rgba(255, 0, 0, 0.35);
-  padding: 20px;
-  background-color: rgba(255, 0, 0, 0.19);
+  border: 0px solid #FFC8C8;
+  box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.14);
+  background-color: #FFEB3B;
   margin: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: left;
 }
 
-.note > p {
-
+.notes-list {
+  padding: 0px;
 }
 
+.new-note-container {
+  width: 100%;
+  height: 50px;
+  margin-top: -10px;
+  background-color: white;
+  text-align: center;
+}
 
-.note-content {
+.new-note {
+  height: 50px;
+  max-width: 100%;
+  width: 400px;
+  background-color: #F44336;
+  display: inline-block;
+  box-shadow: 2px 2px 2px #9E9E9E;
+  text-align: left;
+}
+
+.note-draggable-area {
+  width: 100%;
+  height: 25px;
+  background-color: #FFEB3B;
+}
+
+.note-options-area {
+  width: 100%;
+  height: 25px;
+  margin-top: 100%;
+  background-color: red;
+}
+
+.note-details {
+  height: auto;
+  padding: 20px;
+}
+
+.glyphicon-align-justify {
+  margin-right: 5px;
+  margin-top: 5px;
 }
