--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class="navbar-brand pull-right">
+        <div class="navbar-brand pull-right user-buttons">
         <% if signed_in? %>
-          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+          <p><span class="glyphicon glyphicon-user"></span><span><%= link_to "Sign Out", destroy_user_session_path, :method => :delete%></span></p>
           <%= link_to "Edit Profile", '/users/edit'%>
         <% else %>
           <%= link_to "Sign In", '/users/sign_in'%>
@@ -53,10 +53,15 @@
           </form>
         </div>
       </div>
-
     <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
+    <div class="sub-nav">
+      <div class="sub-nav-option"><p>Notes</p></div>
+      <div class="sub-nav-option"><p>Chat</p></div>
+      <div class="sub-nav-option"><p>Decks</p></div>
+    </div>
   </nav>
+
 
 
 
