Wow this is starting to look like a hack job..... so much jquery bullshit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,11 +11,10 @@
 
 <script type="text/template" id='appNoteViewTemplate'>
 
-    <div class="new-note-container">
-      <div class="new-note"></div>
-    </div>
-
     <div id="notes">
+      <div class="new-note-container">
+        <div class="new-note" contenteditable="true"></div>
+      </div>
       <ul class="notes-list">
       </ul>
     </div>
