--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require jquery-ui
+ *= require font-awesome
  */
 
 
@@ -50,7 +51,7 @@
    margin-right: 25px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.32);
    padding-top: 100px;
-   text-align: left;
+   text-align: center;
    /*padding-left: 50px;
    padding-right: 50px;*/
  }
