--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -145,7 +145,8 @@ nav > .container-fluid {
 .sub-nav {
   height: 40px;
   width: 100%;
-  background-color: #2196F3;
+  background-color: #012136;
+  color: white;
   text-align: center;
 }
 
@@ -158,7 +159,13 @@ nav > .container-fluid {
 }
 
 
-
+.color-pallete-menu {
+  width: 60px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: red;
+  position: absolute;
+}
 
 
 
