--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -2,6 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#notes {
+  text-align: center;
+}
+
+#note-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 9999999;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
 
 .note {
   vertical-align: top;
@@ -18,6 +31,21 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: left;
+}
+
+.noteOverlay {
+ margin: none;
+ position: fixed !important;
+ left: 50%;
+ top: 50%;
+ z-index: 999999999999;
+ transform: translate(-50%, -50%);
+ -webkit-transition: width 1s ease-in-out;
+ -moz-transition: width 1s ease-in-out;
+ -o-transition: width 1s ease-in-out;
+ transition: width 1s ease-in-out;
+ width: 50%;
+ height: 50%;
 }
 
 .notes-list {
@@ -51,8 +79,7 @@
 .note-options-area {
   width: 100%;
   height: 25px;
-  margin-top: 100%;
-  background-color: red;
+  position: relative;
 }
 
 .note-details {
@@ -63,4 +90,51 @@
 .glyphicon-align-justify {
   margin-right: 5px;
   margin-top: 5px;
+}
+
+
+.note-translate {
+  margin-left: 10px;
+  margin-right: 10px;
+  &:hover {
+    color: #F44336;
+    cursor: pointer;
+  }
+}
+
+.note-color {
+  margin-left: 10px;
+  margin-right: 10px;
+  &:hover {
+    color: #F44336;
+    cursor: pointer;
+  }
+}
+
+.note-delete {
+  margin-left: 10px;
+  margin-right: 10px;
+  &:hover {
+    color: #F44336;
+    cursor: pointer;
+  }
+}
+
+.note-edit {
+  margin-left: 10px;
+  margin-right: 10px;
+  &:hover {
+    color: #F44336;
+    cursor: pointer;
+  }
+}
+
+.fa {
+    font-size: 15pt;
+    vertical-align: middle;
+}
+
+.fa-times {
+  margin-top: 5px;
+  margin-right: 5px;
 }
