Holy shit, have done so much since last commit, this shit cray

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,10 @@
     </div>
 </script>
 
-<script type="text/template" id='appNoteViewTemplate'> 
+<script type="text/template" id='appNoteViewTemplate'>
+  <div class="new-note-container">
+    <button id="new-note">New Note</button>
+  </div>
     <div id="notes">
       <ul class="notes-list">
       </ul>
