--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -25,12 +25,13 @@
   display: inline-block;
   overflow: hidden;
   border: 0px solid #FFC8C8;
-  box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.14);
   background-color: #FFEB3B;
   margin: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: left;
+  border-radius: 2px;
 }
 
 .noteOverlay {
@@ -58,16 +59,6 @@
   margin-top: -10px;
   background-color: white;
   text-align: center;
-}
-
-.new-note {
-  height: 50px;
-  max-width: 100%;
-  width: 400px;
-  background-color: #F44336;
-  display: inline-block;
-  box-shadow: 2px 2px 2px #9E9E9E;
-  text-align: left;
 }
 
 .note-draggable-area {
@@ -163,6 +154,13 @@
   color: rgba(0, 0, 0, 0.42);
 }
 
+.note-title-container:empty:before {
+  content: 'Title';
+  font-size: 12pt;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.42);
+}
+
 .note-category-container[contentEditable=true]:empty:before {
   content: 'Category';
   font-size: 12pt;
@@ -170,7 +168,21 @@
   color: rgba(0, 0, 0, 0.42);
 }
 
+.note-category-container:empty:before {
+  content: 'Category';
+  font-size: 12pt;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.42);
+}
+
 .note-content-container[contentEditable=true]:empty:before {
+  content: 'Note';
+  font-size: 12pt;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.42);
+}
+
+.note-content-container:empty:before {
   content: 'Note';
   font-size: 12pt;
   font-weight: bold;
