--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,3 +18,9 @@
       </ul>
     </div>
 </script>
+
+<script type="text/template" id='appDeckViewTemplate'>
+  <div class="new-deck-container">
+      <button id="new-deck">New Deck</button>
+    </div>
+</script>
