--- a/app/assets/stylesheets/note.scss
+++ b/app/assets/stylesheets/note.scss
@@ -26,7 +26,7 @@
   overflow: hidden;
   border: 0px solid #FFC8C8;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.14);
-  background-color: #FFEB3B;
+  background-color: #FFF27D;
   margin: 10px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -53,18 +53,35 @@
   padding: 0px;
 }
 
+#new-note{
+  width: 200px;
+  height: 30px;
+  background-color: #F44336;
+  border: 0px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.41);
+  border-radius: 4px;
+  color: rgb(255, 238, 238);
+  font-size: 14pt;
+  font-family: roboto;
+  &:hover{
+    margin-left: 2px;
+    box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.41);
+  }
+}
+
 .new-note-container {
   width: 100%;
   height: 50px;
   margin-top: -10px;
   background-color: white;
   text-align: center;
+  padding-top: 10px;
 }
 
 .note-draggable-area {
   width: 100%;
   height: 25px;
-  background-color: #FFEB3B;
+  background-color: #FFF27D;
 }
 
 .note-options-area {
@@ -203,6 +220,8 @@
   background-color: rgba(255, 235, 59, 0);
   border: none;
   font-size: 14pt;
+  border: 2px solid;
+   margin: 5px;
 }
 
 .returnOptions {
@@ -213,6 +232,7 @@
   border-radius: 1px;
   .glyphicon-arrow-down{
     margin-top: -1px;
+    color: #656565;
   }
 }
 
@@ -220,7 +240,7 @@
 .colorOne {
  width: 14px;
  height: 14px;
- background-color: #F44336;
+ background-color: #FF786E;
  display: inline-block;
  margin: 2px;
  border-radius: 2px;
@@ -232,7 +252,7 @@
 .colorTwo {
   width: 14px;
   height: 14px;
-  background-color: #2196F3;
+  background-color: #5EB8FF;
   display: inline-block;
   margin: 2px;
   border-radius: 2px;
@@ -244,7 +264,7 @@
 .colorThree {
   width: 14px;
   height: 14px;
-  background-color: #4CAF50;
+  background-color: #76CA79;
   display: inline-block;
   margin: 2px;
   border-radius: 2px;
@@ -257,7 +277,7 @@
   width: 14px;
   height: 14px;
   margin: 2px;
-  background-color: #673AB7;
+  background-color: #B58BFF;
   display: inline-block;
   border-radius: 2px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.46);
@@ -269,7 +289,7 @@
   width: 14px;
   height: 14px;
   margin: 2px;
-  background-color: #FFEB3B;
+  background-color: #FFF27D;
   display: inline-block;
   border-radius: 2px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.46);
