--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,11 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
   <div id="side-nav">
-    <div class="side-nav-header">
-      <p>Header</p>
-    </div>
-    <ul class="side-menu-list">
-      <a href="#"><li>Hi Man</a></a>
-      <a href="#"><li>Who am I</li></a>
-      <a href="#"><li>Test</li></a>
-    </ul>
     <div id="side-nav-footer">
       <p>This is good</p>
     </div>
@@ -41,8 +34,8 @@
         </button>
         <div class="navbar-brand pull-right user-buttons">
         <% if signed_in? %>
-          <p><span class="glyphicon glyphicon-user"></span><span><%= link_to "Sign Out", destroy_user_session_path, :method => :delete%></span></p>
-          <%= link_to "Edit Profile", '/users/edit'%>
+        <%= link_to "", '/users/edit', :class => 'glyphicon glyphicon-user'%>
+          <%= link_to "", destroy_user_session_path, :method => :delete, :class => 'glyphicon glyphicon-log-out'%>
         <% else %>
           <%= link_to "Sign In", '/users/sign_in'%>
           <%= link_to "Sign Up", '/users/sign_up'%>
